# slurm-term

./: .gitignore  CHANGELOG.md  Cargo.toml  PYPI.md  README.md  pyproject.toml
.github/workflows/: release.yml
slurm_term/: __init__.py  config.py  default_templates.py  layout.css  main.py  mock_slurm.py  sbatch_parser.py  slurm_api.py
slurm_term/screens/: __init__.py  add_param_screen.py  composer.py  confirm.py  hardware.py  history.py  import_sbatch_screen.py  inspector.py  monitor.py  param_catalog.py  peek_screen.py  templates.py
slurm_term/utils/: __init__.py  formatting.py  validators.py
src/: app.rs  config.rs  main.rs  mock_slurm.rs  param_catalog.rs  sbatch_parser.rs  slurm_api.rs  templates.rs  theme.rs  validators.rs
src/tabs/: composer.rs  hardware.rs  history.rs  inspector.rs  mod.rs  monitor.rs
tests/: test_app.py  test_config.py  test_default_templates.py  test_formatting.py  test_inspector_metrics.py  test_sbatch_parser.py  test_slurm_api.py  test_templates.py  test_validators.py
