[package]
name = "slurm-term"
version = "0.1.5"
edition = "2021"
description = "A Terminal User Interface for the Slurm workload manager"
license = "MIT"
readme = "README.md"
repository = "https://github.com/22cav/slurm-term"
homepage = "https://github.com/22cav/slurm-term"
keywords = ["slurm", "tui", "hpc", "terminal", "workload-manager"]
categories = ["command-line-utilities"]
authors = ["Matteo Caviglia"]
exclude = [
    "target/",
    ".git/",
    ".gitignore",
    "dist/",
    "pyproject.toml",
    "PYPI.md",
    "PUBLISH.md",
]

[[bin]]
name = "slurm-term"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
strip = true