[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-term"
version = "0.1.0"
description = "A Terminal User Interface for the Slurm workload manager"
readme = "PYPI.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Matteo Caviglia"}]
keywords = ["slurm", "hpc", "tui", "terminal", "cluster"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Clustering",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=0.90.0",
    "textual-plotext>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "textual-dev>=1.0",
]

[project.scripts]
slurm-term = "slurm_term.main:run"

[project.urls]
Repository = "https://github.com/22cav/slurm-term"
Issues = "https://github.com/22cav/slurm-term/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["slurm_term*"]

[tool.setuptools.package-data]
slurm_term = ["layout.css", "py.typed"]
