[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "slurm-term"
version = "0.1.5"
description = "A Terminal User Interface for the Slurm workload manager"
readme = "PYPI.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Matteo Caviglia"}]
keywords = ["slurm", "hpc", "tui", "terminal", "cluster"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Topic :: System :: Clustering",
    "Topic :: System :: Monitoring",
]

[project.urls]
Repository = "https://github.com/22cav/slurm-term"
Issues = "https://github.com/22cav/slurm-term/issues"

[tool.maturin]
bindings = "bin"
strip = true
